# CraiG

./: .gitignore  ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Docker-Makefile  Dockerfile  INSTALL  Makefile.am  NEWS  README.extended  README.md  acx_mpi.m4  autogen.sh  configure.ac
doc/: Makefile.am  craig.doxygen  header.tex
perl/lib/: CRAIGPredTask.pm  CRAIGTask.pm  Contig.pm  Feature.pm  GSNAPTask.pm  GenUtils.pm  Gene.pm  GeneModel.pm  GeneModelProps.pm  Genefinder.pm  Histogram.pm  HistogramUtils.pm  Makefile  Makefile.am  Organism.pm  PWM.pm  PWMUtils.pm  ProtUtils.pm  ScoreGenesTask.pm  SigUtils.pm  Signal.pm  Utils.pm  XSignalsTask.pm  enum.pm  maf.pm
regex/: Makefile.am
regex/.deps/: c_regex_traits.Po  c_regex_traits_common.Po  cpp_regex_traits.Po  cregex.Po  fileiter.Po  instances.Po  posix_api.Po  regex.Po  regex_debug.Po  regex_synch.Po  w32_regex_traits.Po  wide_posix_api.Po  winstances.Po
regex/boost/config/.svn/: entries
regex/boost/config/CVS/: Entries  Repository
regex/boost/config/CVS/.svn/: entries
regex/boost/config/compiler/: gcc.hpp
regex/boost/config/compiler/.svn/: entries
regex/boost/config/compiler/CVS/: Entries
regex/boost/config/compiler/CVS/.svn/: entries
regex/boost/config/platform/.svn/: entries
regex/boost/config/platform/CVS/: Entries  Repository
regex/boost/config/platform/CVS/.svn/: entries
regex/boost/config/stdlib/.svn/: entries
regex/boost/config/stdlib/CVS/: Entries  Repository
regex/boost/config/stdlib/CVS/.svn/: entries
regex/boost/detail/.svn/: entries
regex/boost/detail/CVS/.svn/: entries
regex/boost/detail/CVS/.svn/text-base/: Entries.svn-base  Repository.svn-base
regex/boost/mpl/.svn/: entries
regex/boost/mpl/CVS/: Entries  Repository
regex/boost/mpl/CVS/.svn/: entries
regex/boost/mpl/aux_/.svn/: entries
regex/boost/mpl/aux_/CVS/: Repository
regex/boost/mpl/aux_/CVS/.svn/: entries
regex/boost/mpl/aux_/config/.svn/: entries
regex/boost/mpl/aux_/config/CVS/: Entries
regex/boost/mpl/aux_/preprocessed/.svn/: entries
regex/boost/mpl/aux_/preprocessed/CVS/: Entries  Repository
regex/boost/mpl/aux_/preprocessor/.svn/: entries
regex/boost/mpl/aux_/range_c/.svn/: entries
regex/boost/mpl/aux_/range_c/CVS/: Entries  Repository
regex/boost/preprocessor/.svn/: entries
regex/boost/preprocessor/CVS/.svn/: entries
regex/boost/preprocessor/CVS/.svn/text-base/: Entries.svn-base  Repository.svn-base
regex/boost/preprocessor/arithmetic/.svn/: entries
regex/boost/preprocessor/arithmetic/CVS/: Entries
regex/boost/preprocessor/arithmetic/CVS/.svn/: entries
regex/boost/preprocessor/arithmetic/detail/.svn/: entries
regex/boost/preprocessor/array/.svn/: entries
regex/boost/preprocessor/array/CVS/: Entries
regex/boost/preprocessor/comparison/.svn/: entries
regex/boost/preprocessor/comparison/CVS/: Entries
regex/boost/preprocessor/config/.svn/: entries
regex/boost/preprocessor/config/CVS/: Repository
regex/boost/preprocessor/control/.svn/: entries
regex/boost/preprocessor/control/CVS/: Entries
regex/boost/preprocessor/debug/.svn/: entries
regex/boost/preprocessor/debug/CVS/: Repository
regex/boost/preprocessor/detail/.svn/: entries
regex/boost/preprocessor/detail/CVS/: Entries
regex/boost/preprocessor/facilities/.svn/: entries
regex/boost/preprocessor/facilities/CVS/: Entries  Repository
regex/boost/preprocessor/iteration/.svn/: entries
regex/boost/preprocessor/iteration/CVS/: Entries  Repository
regex/boost/preprocessor/list/.svn/: entries
regex/boost/preprocessor/list/CVS/: Repository
regex/boost/preprocessor/logical/.svn/: entries
regex/boost/preprocessor/logical/CVS/: Repository
regex/boost/preprocessor/punctuation/.svn/: entries
regex/boost/preprocessor/punctuation/CVS/: Entries
regex/boost/preprocessor/repetition/.svn/: entries
regex/boost/preprocessor/selection/.svn/: entries
regex/boost/preprocessor/selection/CVS/: Repository
regex/boost/preprocessor/seq/.svn/: entries
regex/boost/preprocessor/slot/.svn/: entries
regex/boost/preprocessor/slot/CVS/: Entries  Repository
regex/boost/preprocessor/tuple/.svn/: entries
regex/boost/preprocessor/tuple/CVS/: Entries  Repository
regex/boost/regex/.svn/: entries
regex/boost/regex/CVS/: Repository
regex/boost/regex/CVS/.svn/: entries
regex/boost/regex/v3/.svn/: entries
regex/boost/regex/v3/CVS/: Repository
regex/boost/test/: execution_monitor.hpp  minimal.hpp  unit_test.hpp  unit_test_log.hpp  unit_test_result.hpp  unit_test_suite.hpp
regex/boost/test/.svn/: entries
regex/boost/test/.svn/text-base/: auto_unit_test.hpp.svn-base  floating_point_comparison.hpp.svn-base  test_tools.hpp.svn-base  unit_test_suite_ex.hpp.svn-base
regex/boost/test/CVS/.svn/: entries
regex/boost/test/detail/: unit_test_parameters.hpp
regex/boost/test/detail/.svn/: entries
regex/boost/test/detail/CVS/: Entries
regex/boost/test/included/: prg_exec_monitor.hpp  unit_test_framework.hpp
regex/boost/test/included/.svn/: entries
regex/boost/test/included/CVS/: Entries
regex/boost/type_traits/.svn/: entries
regex/boost/type_traits/CVS/.svn/: entries
regex/boost/type_traits/detail/.svn/: entries
regex/boost/type_traits/detail/CVS/: Repository
regex/boost/utility/.svn/: entries
regex/boost/utility/CVS/: Entries
regex/boost/utility/CVS/.svn/: entries
src/: ArgParseUtils.h  Exon.cpp  Exon.h  Gene.cpp  Gene.h  GeneEvaluator.cpp  GeneEvaluator.h  GeneTagPrinter.cpp  GeneTagPrinter.h  GeneUtils.cpp  GeneUtils.h  Makefile.am  Organism.cpp  Organism.h  Overlap.cpp  Overlap.h  RSqUtils.cpp  RSqUtils.h  RepeatedElem.h  Sim.cpp  Sim.h  Transcript.cpp  Transcript.h  TypeDefs.cpp  TypeDefs.h  aggregate_scorefilter_vals.cpp  aggregate_signalfilter_vals.cpp  analyze_annot_vs_rnaseq.cpp  compute_feat_vector.cpp  compute_param_stats.cpp  craigPredict.cpp  craigTrain.cpp  emit_sequence.cpp  eval_prediction.cpp  extract_orfs.cpp  find_nocov_regions.cpp  gene_extender.cpp  genes2tags.cpp  get_coverage_genes.cpp  get_covxsignals.cpp  (+13 more)
tests/: Makefile.am  package.m4  programs.at  testsuite.at
(+1079 files in other folders)
