noinst_LIBRARIES = libboost_regex.a
EXTRA_DIST =  boost/assert.hpp  boost/checked_delete.hpp boost/config.hpp  boost/cregex.hpp  boost/cstdint.hpp  boost/cstdlib.hpp  boost/current_function.hpp  boost/detail  boost/limits.hpp  boost/mpl boost/preprocessor  boost/regex_fwd.hpp  boost/regex.h  boost/regex.hpp  boost/scoped_array.hpp  boost/scoped_ptr.hpp  boost/static_assert.hpp  boost/test  boost/timer.hpp  boost/type_traits  boost/type_traits.hpp  boost/utility  boost/utility_fwd.hpp  boost/utility.hpp boost/config boost/regex

libboost_regex_a_SOURCES = primary_transform.hpp c_regex_traits.cpp c_regex_traits_common.cpp c_regex_traits_common.cpp cpp_regex_traits.cpp cregex.cpp fileiter.cpp instances.cpp posix_api.cpp regex.cpp regex_debug.cpp regex_synch.cpp w32_regex_traits.cpp wide_posix_api.cpp winstances.cpp


AM_CPPFLAGS = -I@top_srcdir@/regex/
