perllibdir = $(prefix)/perl/lib
dist_perllib_DATA = Contig.pm CRAIGPredTask.pm CRAIGTask.pm enum.pm Feature.pm Genefinder.pm GeneModel.pm GeneModelProps.pm Gene.pm GenUtils.pm GSNAPTask.pm Histogram.pm HistogramUtils.pm maf.pm Organism.pm ProtUtils.pm PWM.pm PWMUtils.pm Signal.pm SigUtils.pm Utils.pm XSignalsTask.pm ScoreGenesTask.pm GTF.pm Eval.pm
